# raytracing

./: .clangd  .gitignore  meson.build
include/: colors.hpp  config.h.in  hittable.h  rays.hpp  threadpool.hpp  vector.hpp
include/objects/: sphere.hpp
include/utils/: constants.hpp  log_sink.hpp  logging.hpp
notes/: 1.typ
renderer/: renderer.cpp  renderer.hpp
renderer/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: colors.cpp  hittable.cpp  rays.cpp  raytracer.cpp  threadpool.cpp
src/objects/: sphere.cpp
